# paths

./: README.md  com.bitstower.Paths.json  meson.build
.github/workflows/: build.yml
data/: com.bitstower.Paths.appdata.xml.in  com.bitstower.Paths.desktop.in  com.bitstower.Paths.gschema.xml
data/ui/: Application.css  MainHeaderBar.ui  MainWindow.ui  NavHeaderBar.ui  ui.gresource.xml
po/: POTFILES  README.md  com.bitstower.Paths.pot
src/: Application.vala  MainHeaderBar.vala  MainWindow.vala  NavHeaderBar.vala  meson.build
